--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -38,9 +38,16 @@
     
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    const fifteen = inventors.filter(function (inventor) {
+      return inventor.year >= 1500 && inventor.year < 1600;
+    })
+
+    const fifteen2 = inventors.filter(inventor => inventor.year >= 1500 && inventor.year < 1600);
+    console.table(fifteen2)
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+    
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
