--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -47,7 +47,13 @@
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
-    
+    const names = inventors.map(function(inventor) {
+      return inventor.first + " " + inventor.last;
+    })
+
+    const names2 = inventors.map( inventor => inventor.first + inventor.last)
+
+    console.log(names2)
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
