--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -51,12 +51,23 @@
       return inventor.first + " " + inventor.last;
     })
 
-    const names2 = inventors.map( inventor => inventor.first + inventor.last)
+    const names2 = inventors.map(inventor => inventor.first + inventor.last)
 
     console.log(names2)
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+const inventorByAge = inventors.sort(function(inventor1, inventor2) {
+  if (inventor1.year > inventor2.year) {
+    return 1
+  }
+  else return -1
+})
+
+const inventorByAge2 = inventors.sort((a , b) => a.year > b.year ? 1 : -1)
+
+console.table(inventorByAge2)
+
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
