--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -72,6 +72,14 @@ console.table(inventorByAge2)
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
 
+const sumAges = inventors.reduce(function(total, inventor){
+  return total + (inventor.passed - inventor.year);
+},0)
+
+const sumAges2 = inventors.reduce((total, inventor) => total + (inventor.passed - inventor.year),0 );
+
+console.log(sumAges2)
+
     // 5. Sort the inventors by years lived
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
